fixed big text spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -291,7 +291,8 @@ p, h2, h3, h4 {
   text-align: center;
   &:hover {
     @media (hover: hover) {
-      background-color: #102437;
+      color:#ededed;
+      background-color: #455090;
     }
   }
 }
